gcc/testsuite/rust/rustc/ui/parser/issues/issue-69259.rs
fn main() {}

fn f) {} // { dg-error "" "" { target *-*-* } }

